--- a/index.html
+++ b/index.html
@@ -14,44 +14,19 @@
   <div id="app" class="app-container">
   </div>
 
+
   <script type="text/template" data-template-name="index">
-    <div class="search-page">
-      <h1>Gif&Pic</h1>
-      <input type="text" placeholder="Fill me in!" />
-    </div>
+    <h1>Gif&Pic</h1>
+    <input type="text" placeholder="Fill me in!" />
   </script>
 
   <script type="text/template" data-template-name="results">
-    <div id="grid" data-columns>
-      <div class="column size-1of3">
-        <div>
-          <img src="images/untitled-1.jpg">
-        </div>
-        <div>
-          <img src="images/untitled-20.jpg">
-        </div>
-      </div>
-      <div class="column size-1of3">
-        <div>
-          <img src="images/untitled-18.jpg">
-        </div>
-        <div>
-          <img src="images/untitled-4.jpg">
-        </div>
-      </div>
-      <div class="column size-1of3">
-        <div>
-          <img src="images/untitled-16.jpg">
-        </div>
-        <div>
-          <img src="images/untitled-6.jpg">
-        </div>
-      </div>
+    <div></div>
   </script>
 
   <script type="text/template" data-template-name="selected">
     <div class="selected-container">
-      <img src="images/untitled-10.jpg">
+      <div></div>
     </div>
   </script>
 
@@ -59,7 +34,7 @@
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
   <script src="bower_components/salvattore/dist/salvattore.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/new.js"></script>
 
 </body>
 
