--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
 
   <script type="text/template" data-template-name="results">
-    <div></div>
+    <span class='pulled-images'>Images</span>
   </script>
 
   <script type="text/template" data-template-name="selected">
