--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Gif&Pic</title>
+  <title>Flick&Gif</title>
 
   <link rel="stylesheet" href="styles/main.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -16,7 +16,7 @@
 
 
   <script type="text/template" data-template-name="index">
-    <h1>Gif&Pic</h1>
+    <h1>Flick&Gif</h1>
     <input type="text" placeholder="Fill me in!" />
   </script>
 
