--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="styles/main.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link href="http://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
 
 </head>
 
